Back, Front Done!, 이제부터 추가 기능

--- a/src/main/resources/templates/appointList.html
+++ b/src/main/resources/templates/appointList.html
@@ -45,12 +45,11 @@
                                 예약 정보
                             </div>
 
-
                             <!--  회원 이름 / 텍스트 라벨-->
 
                             <div class="row g-3 p-3">
                                 <div class="col-4">
-                                    <label for="userName" class="col-sm-3 col-form-label">예약 시간</label>
+                                    <label for="userName" class="col-sm-3 col-form-label">Time</label>
                                 </div>
                                 <!--  회원 이름 / 텍스트 뷰 라벨 -->
                                 <div class="col-8">
@@ -63,7 +62,7 @@
 
                         <div class="row g-3 p-3">
                             <div class="col-4">
-                                <label for="userId" class="col-sm-3 col-form-label"> 헤어 컷 </label>
+                                <label for="userId" class="col-sm-3 col-form-label">cut </label>
                             </div>
                             <!--  회원 이름 / 텍스트 뷰 라벨 -->
                             <div class="col-8">
@@ -71,12 +70,11 @@
                             </div>
                         </div>
 
-
                         <!-- 회원정보 Pw  -->
 
                         <div class="row g-3 p-3">
                             <div class="col-4">
-                                <label for="userPw" class="col-sm-3 col-form-label">파마</label>
+                                <label for="userPw" class="col-sm-3 col-form-label">perm</label>
                             </div>
                             <!--  회원 Pw / 텍스트 뷰 라벨 -->
                             <div class="col-8">
@@ -84,12 +82,11 @@
                             </div>
                         </div>
 
-
                         <!-- 회원정보 phone  -->
 
                         <div class="row g-3 p-3">
                             <div class="col-4">
-                                <label for="userPh" class="col-sm-3 col-form-label">염색</label>
+                                <label for="userPh" class="col-sm-3 col-form-label">color</label>
                             </div>
                             <!--  회원 phone / 텍스트 뷰 라벨 -->
                             <div class="col-8">
@@ -98,11 +95,22 @@
                         </div>
 
 
+                        <!-- 회원정보 Email  -->
+
+                        <div class="row g-3 p-3">
+                            <div class="col-4">
+                                <label for="userMail" class="col-sm-3 col-form-label">clinic</label>
+                            </div>
+                            <!--  회원 Email / 텍스트 뷰 라벨 -->
+                            <div class="col-8">
+                                <input id="userMail" class="form-control" type="email" value="clinic" readonly>
+                            </div>
+                        </div>
 
 
                         <div class="row g-3 p-3">
                             <div class="col-4">
-                                <label for="dis" class="col-sm-3 col-form-label">디자이너</label>
+                                <label for="dis" class="col-sm-3 col-form-label">designer</label>
                             </div>
                             <!--  회원 phone / 텍스트 뷰 라벨 -->
                             <div class="col-8">
