--- a/src/main/resources/templates/appointment.html
+++ b/src/main/resources/templates/appointment.html
@@ -1,6 +1,6 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>예약 페이지 </title>
+    <title>예약 페이지</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,6 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.js"></script>
+    <link rel="stylesheet" href="assets/css/imagecss.css">
     <!-- 캘린더 api -->
     <link rel="stylesheet" href="assets/css/calender.css">
     <script src="assets/js/calender.js"></script>
@@ -24,19 +25,12 @@
 
     <!--    카카오 결제를 위한 JS-->
     <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
-    <!--    결제 JS-->
-    <script type="text/javascript" src="useJs/payment.js"></script>
-
     <!--    swal(alert 대체)-->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-
-    <!--    값 확인-->
+    <!--    값 확인, 결제 -->
     <script type="text/javascript" src="useJs/apoint.js"></script>
-<!--    이미지 box-->
-    <link rel="stylesheet" href="assets/css/imagecss.css">
-    <!--  --------------------------------------------------------------------->
 
-    <!--    유효성 검사 / image -->
+    <!--  --------------------------------------------------------------------->
     <style>
         ul {
             list-style: none;
@@ -54,21 +48,22 @@
 <!--예약 페이지도 마찬가지로 template x -->
 
 <header class="container mb-2 p-0">
-        <div class="container m-0">
-            <span class="image main"><img src="images/pic_appointment.jpg" alt=""/></span>
-        </div>
+    <div class="container m-0">
+        <span class="image main"><img src="images/pic_appointment.jpg" alt=""/></span>
+    </div>
 </header>
+
 
 
 <main>
     <div class="container">
         <div class="container-fluid">
-            <form class="border border-secondary rounded-3" action="/insertAppointment" method="post">
+            <form class="border border-secondary rounded-3" id="frm" action="/insertAppointment" method="post">
                 <div class="p-5">
                     <!-- 예약 날짜 / 시간 (javascript & css 같이 사용) -->
                     <div class="p-3">
-                        <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
-                            원하는 날짜, 시간을 선택해 주세요.
+                        <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                            Choose your Appointment
                         </div>
                         <div>
                             <div class="row justify-content-center mx-0 mb-5">
@@ -80,11 +75,11 @@
                                                     <input type="text" onclick="checkDate()" onchange="checkDate()" id="dp1" class="datepicker" placeholder="날짜를 선택해 주세요" name="apointDate" readonly><span
                                                         class="fa fa-calendar"></span>
                                                     <!--값 뜨는곳-->
-                                                    <span class="date">원하는 날짜를 선택해 주세요</span>
+                                                    <span class="date">값을 정해주세요.</span>
                                                     <input type="text" class="datepicker" id="dp2" placeholder="시간을 선택해 주세요" name="Time" disabled="true">
                                                     <!--값 뜨는곳-->
-                                                    <span class="time">원하는 시간을 선택해 주세요</span>
-                                                    <!--                                                   dp2에 datepicker가 있어서 disavbled로 막아 값이 안가져와서 하이든 인풋 태그를 만듦-->
+                                                    <span class="time">값을 정해주세요.</span>
+                                                    <!--                                                    dp2에 datepicker가 있어서 disavbled로 막아 값이 안가져와서 하이든 인풋 태그를 만듦-->
                                                     <input hidden type="text" id="apointTime" name="apointTime">
                                                 </div>
                                             </div>
@@ -179,8 +174,8 @@
                     <!--                    메뉴 선택 -->
                     <!-- cut 번호 101~ -->
                     <div class="p-2">
-                        <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
-                            헤어 컷
+                        <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                            Hair Cut
                         </div>
                         <div class="form-floating mb-3">
                             <select onclick="checkCut()" onchange="checkCut()" id="apointCut" name="apointCut"
@@ -199,8 +194,8 @@
 
                     <!-- Perm 번호 201~-->
                     <div class="p-2">
-                        <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
-                            펌
+                        <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                            Perm
                         </div>
                         <div class="form-floating mb-3">
                             <select onclick="checkPerm()" onchange="checkPerm()" id="apointPerm" name="apointPerm"
@@ -219,8 +214,8 @@
                     </div>
                     <!-- Color 301~-->
                     <div class="p-2">
-                        <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
-                            염색
+                        <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                            Color
                         </div>
                         <div class="form-floating mb-3">
                             <select onclick="checkColor()" onchange="checkColor()" id="apointColor" name="apointColor"
@@ -237,30 +232,29 @@
                         <span class="color">값을 정해주세요.</span>
                     </div>
 
-                        <input hidden name="apointUserId" th:value="${session.user.userId}">
-                        <input hidden name="apointUserPh" th:value="${session.user.userPh}">
-                        <input hidden name="apointUserName" th:value="${session.user.userName}">
+                    <input hidden id="apointPrice" th:value="${session.dInfo.apointPrice}">
+                    <input hidden name="apointDesigner" id="apointDesigner" th:value="${session.dInfo.designerName}">
+                    <input hidden name="apointShop" id="apointShop" th:value="${session.dInfo.designerShop}">
+                    <input hidden name="apointUserId" th:value="${session.user.userId}">
+                    <input hidden name="apointUserPh" id="apointUserPh" th:value="${session.user.userPh}">
+                    <input hidden id="apointUserMail" th:value="${session.user.userMail}">
+                    <input hidden name="apointUserName" id="apointUserName" th:value="${session.user.userName}">
 
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-outline-dark" type="button" id="btn-apoint" onclick="payment()">
-                                결제하기
-                            </button>
-                            <button class="btn btn-outline-secondary" type="button" onclick="location.href='/main'">취소</button>
-                        </div>
+                    <div class="d-grid gap-2">
+                        <button class="btn btn-outline-dark" type="button" id="btn-apoint" onclick="payment()">
+                            결제하기(예약)
+                        </button>
+                        <button class="btn btn-outline-secondary" type="button" onclick="history.back()">취소</button>
                     </div>
-
-
+                </div>
             </form>
-
         </div>
     </div>
-
 </main>
 
 
 <!--footer-->
-<footer th:replace="layout/Footer :: #footer "></footer>
-<!-- 캘린더로 인해 sub footer 이상해서 메인 footer로 바꿔뒀습니다. -->
+<footer th:replace="layout/Footer :: mainFooter"></footer>
 
 </body>
 </html>
