--- a/src/main/resources/templates/layout/Footer.html
+++ b/src/main/resources/templates/layout/Footer.html
@@ -8,14 +8,12 @@
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css"/>
     </noscript>
+    <script></script>
 </head>
 <body>
 
 <footer th:fragment="mainFooter" id="footer" class="text-center">
-    <div class="container p-4">
-        <p class="copyright">&copy; Promise Hair & 1 team  & BootStrap 5 template Design : <a href="https://html5up.net">HTML5 UP</a>. </p>
-    </div>
-
+    <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 </footer>
 
 </body>
