--- a/src/main/resources/templates/myPageUser.html
+++ b/src/main/resources/templates/myPageUser.html
@@ -23,6 +23,12 @@
         }
         /*]]>*/
     </script>
+<!--    예약목록을 바로 인식하지 못해서 새로고침 해줌-->
+    <script>
+        $(document).ready(function () {
+            location.reload();
+        });
+    </script>
     <style>
         .table th, .table td {
             text-align: center;
@@ -56,10 +62,6 @@
                     <button class="nav-link" id="nav-apoint-tab" data-bs-toggle="tab" data-bs-target="#nav-apoint"
                             type="button" role="tab" aria-controls="nav-apoint" aria-selected="false"> 예약 목록
                     </button>
-
-                    <button class="nav-link" id="nav-view-tab" data-bs-toggle="tab" data-bs-target="#nav-review"
-                            type="button" role="tab" aria-controls="nav-apoint" aria-selected="false"> 리뷰 목록
-                    </button>
                 </div>
 
                 <!--------------------------------------------------------------------------------------------------------------->
@@ -69,7 +71,7 @@
                     <div class="tab-content" id="nav-tabContent">
                         <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
                             <!--  회원정보 타이틀 -->
-                            <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
+                            <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary">
                                 회원정보
                             </div>
 
@@ -78,11 +80,11 @@
                             <div class="text-center">
                                 <div class="row g-3 p-3">
                                     <div class="col-2">
-                                        <label for="userName" class="col-form-label fw-bold">이름</label>
+                                        <label for="userName" class="col-sm-3 col-form-label">이름</label>
                                     </div>
                                     <!--  회원 이름 / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userName" class="form-control" type="text" th:value="${session.user.userName}" readonly>
+                                        <input id="userName" class="form-control" type="text" value="이름 보여질 곳" th:value="${session.user.userName}" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -91,11 +93,11 @@
                             <div class="text-center">
                                 <div class="row g-3 p-3">
                                     <div class="col-2">
-                                        <label for="userId" class="col-form-label fw-bold">아이디</label>
+                                        <label for="userId" class="col-sm-3 col-form-label">ID</label>
                                     </div>
                                     <!--  회원 아이디 / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userId" class="form-control" type="text" th:value="${session.user.userId}" readonly>
+                                        <input id="userId" class="form-control" type="text" value="ID 보여질 곳" th:value="${session.user.userId}" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -104,11 +106,11 @@
                             <div class="text-center">
                                 <div class="row g-3 p-3">
                                     <div class="col-2">
-                                        <label for="userPw" class="col-form-label fw-bold">패스워드</label>
+                                        <label for="userPw" class="col-sm-3 col-form-label">PW</label>
                                     </div>
                                     <!--  회원 Pw / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userPw" class="form-control" type="text" th:value="${session.user.userPw}" readonly>
+                                        <input id="userPw" class="form-control" type="text" th:value="${session.user.userPw}" value="PW 보여질 곳" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -117,7 +119,7 @@
                             <div class="text-center">
                                 <div class="row g-3 p-3">
                                     <div class="col-2">
-                                        <label for="userPh" class="col-form-label fw-bold">연락처</label>
+                                        <label for="userPh" class="col-sm-3 col-form-label">Phone</label>
                                     </div>
                                     <!--  회원 phone / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
@@ -130,11 +132,11 @@
                             <div class="text-center">
                                 <div class="row g-3 p-3">
                                     <div class="col-2">
-                                        <label for="userMail" class="col-form-label fw-bold">Email</label>
+                                        <label for="userMail" class="col-sm-3 col-form-label">Phone</label>
                                     </div>
                                     <!--  회원 Email / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userMail" class="form-control" type="email" th:value="${session.user.userMail}" readonly>
+                                        <input id="userMail" class="form-control" type="email" th:value="${session.user.userMail}" value="email 보여질 곳" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -150,22 +152,19 @@
                             </div>
                         </div>
                     </div>
-
-
                     <div class="tab-content" id="nav-apoint-tabContent">
                         <div class="tab-pane fade show" id="nav-apoint" role="tabpanel" aria-labelledby="nav-apoint-tab" tabinde>
-                            <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary fw-bold">
+                            <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary">
                                 예약 내역
                             </div>
                             <table th:if="${session.apoints} != null" class="table">
                                 <thead class="table-dark">
-                                <tr class="fw-bold">
+                                <tr>
                                     <th>지점</th>
                                     <th>디자이너</th>
                                     <th>컷</th>
                                     <th>펌</th>
                                     <th>염색</th>
-                                    <th>클리닉</th>
                                     <th>날짜</th>
                                     <th>시간</th>
                                     <th>리뷰작성</th>
@@ -178,52 +177,14 @@
                                     <td th:text="${apointsList.apointCut}"></td>
                                     <td th:text="${apointsList.apointPerm}"></td>
                                     <td th:text="${apointsList.apointColor}"></td>
-                                    <td th:text="${apointsList.apointClinic}"></td>
                                     <td th:text="${apointsList.apointDate}"></td>
                                     <td th:text="${apointsList.apointTime}"></td>
-                                    <td><button class="btn btn-outline-dark" type="button" onclick="location.href='/shopReviewWriter'">리뷰 작성</button></td>
+                                    <td><button class="btn btn-outline-primary" onclick="location.href='/shopReviewWriter'">리뷰 작성</button></td>
                                 </tr>
                                 </tbody>
                             </table>
                             <h2 th:if="${session.apoints} == null">조회된 예약내역이 없습니다.</h2>
                         </div>
-                    </div>
-
-                    <div class="tab-content" id="nav-view-review">
-                        <div class="tab-pane fade" id="nav-review" role="tabpanel" aria-labelledby="nav-view-tab" tabinde="0">
-                            <table class="table table-hover text-center" th:if="${reviewList.size()} > 0">
-                                <colgroup>
-                                    <col width="10%">
-                                    <col width="50%">
-                                    <col width="15%">
-                                </colgroup>
-                                <thead class="table-dark">
-                                <tr>
-                                    <th>No.</th>
-                                    <th>Content</th>
-                                    <!--                                    <th colspan="3">Title</th>-->
-                                    <th>Date</th>
-                                    <!--                        <th>Like</th>-->
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr th:each="list:${reviewList}">
-                                    <td th:text="${list.reIdx}"></td>
-                                    <td th:text="${list.reContent}"></td>
-
-                                    <!--                                    <td colspan="3"><a href="/shopReviewDetail?reIdx=" th:attrappend="href=${list.reIdx}" th:text="${list.reTitle}"></a></td>-->
-                                    <!--                                    <td th:text="${list.reWriter}"></td>-->
-                                    <td th:text="${list.reCreate}"></td>
-                                    <!--                        <td th:text="${list.reLike}"></td>-->
-                                </tr>
-                                </tbody>
-                            </table>
-                            <h2 class="text-center" th:if="${reviewList.size()} == 0"> 조회된 결과가 없습니다.</h2>
-                            <!--                            <div class="d-grid gap-2 d-md-flex justify-content-md-end p-3">-->
-                            <!--                                <button class="btn btn-outline-dark me-md-2" type="button" onclick="location.href='/shopReviewWriter'">글 쓰기</button>-->
-                            <!--                            </div>-->
-                        </div>
-
                     </div>
                 </div>
             </form>
