--- a/src/main/resources/templates/myPageShop.html
+++ b/src/main/resources/templates/myPageShop.html
@@ -51,6 +51,10 @@
                     <button class="nav-link" id="nav-apoint-tab" data-bs-toggle="tab" data-bs-target="#nav-apoint"
                             type="button" role="tab" aria-controls="nav-apoint" aria-selected="false"> 예약 목록
                     </button>
+
+                    <button class="nav-link" id="nav-designer-tab" data-bs-toggle="tab" data-bs-target="#nav-designer"
+                            type="button" role="tab" aria-controls="nav-designer" aria-selected="false"> 디자이너 목록
+                    </button>
                 </div>
 
                 <!--------------------------------------------------------------------------------------------------------------->
@@ -128,7 +132,7 @@
                                     <div class="col-2">
                                         <label for="shopBusiness" class="col-form-label">사업자 등록 번호</label>
                                     </div>
-                                    <!--  회원 phone / 텍스트 뷰 라벨 -->
+                                    <!--  회원 / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
                                         <input id="shopBusiness" class="form-control" type="tel"
                                                th:value="${session.shop.shopBusiness}"
@@ -253,7 +257,6 @@
                                     <th>컷</th>
                                     <th>펌</th>
                                     <th>염색</th>
-                                    <th>클리닉</th>
                                     <th>날짜</th>
                                     <th>시간</th>
                                 </tr>
@@ -268,6 +271,38 @@
                                     <td th:text="${apointsList.apointColor}"></td>
                                     <td th:text="${apointsList.apointDate}"></td>
                                     <td th:text="${apointsList.apointTime}"></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <h2 th:if="${session.apoints} == null">조회된 예약목록이 없습니다.</h2>
+                        </div>
+                    </div>
+<!--                    디자이너 목록-->
+                    <div class="tab-content" id="nav-designer-tabContent">
+                        <div class="tab-pane fade show" id="nav-designer" role="tabpanel"
+                             aria-labelledby="nav-designer-tab" tabinde>
+                            <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary">
+                                디자이너 목록
+                            </div>
+                            <table th:if="${session.apoints} != null" class="table">
+                                <thead class="table-dark">
+                                <tr>
+                                    <th>디자이너 이름</th>
+                                    <th>직급</th>
+                                    <th>예약금</th>
+                                    <th>한줄소개</th>
+                                    <th></th>
+                                </tr>
+                                </thead>
+                                <tbody class="table-striped">
+                                <tr th:each="designerList:${session.desingers}">
+                                    <form action="" method="post">
+                                    <td th:text="${designerList.designerName}"></td>
+                                    <td th:text="${designerList.designerPosition}"></td>
+                                    <td th:text="${designerList.apointPrice}"></td>
+                                    <td th:text="${designerList.designerIntroduce}"></td>
+                                    <td><button type="submit" class="btn btn-outline-primary">수정</button></td>
+                                    </form>
                                 </tr>
                                 </tbody>
                             </table>
